added docs for create comment controller at POST /threads/{thread_id}/comments
